[tool.poetry]
name = "test-repo"
version = "0.1.0"
description = ""
authors = ["Oleg Usachev <usaechv97@mail.ru>"]
readme = "README.md"
packages = [{include = "test_repo"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
